# Newt

./: Changelog.md  README.md  new.cabal  newt.cabal
appsrc/: Main.hs
src/: Main.hs
src/Newt/: CmdParsing.hs  Inputs.hs  Newt.hs  Outputs.hs  Utilities.hs
tests/src/: Integration.hs  Main.hs  ReplaceTests.hs  TestUtilities.hs  UtilityTests.hs
tests/testFiles/: funyUnicode.bib
tests/testFiles/dirTemplates/cabalProject/: <<<projName>>>.cabal  LICENSE
tests/testFiles/dirTemplates/cabalProject/appsrc/: Main.hs
tests/testFiles/dirTemplates/cabalProject/tests/src/: Main.hs
tests/testFiles/dirTemplates/template2/<<<projName>>>/: in.cabal
tests/testFiles/dirTemplates/templateWithImages/: <<<name>>>.txt
tests/testFiles/simpleTest/: alternate1.txt  in.cabal  in.cabal.oracle.1  in.cabal.oracle.2  simple1.txt
