-- cabal configure --prefix=$HOME --user
-- cabal build
name:                new
version:             0.0.0.1
synopsis:            A trivially simple app to create things from simple templates.
description:         Instantiates text things from templates.
category:            Tools
license:             BSD3
License-file:        LICENSE
author:              Rogan Creswick
maintainer:          creswick@gmail.com
Cabal-Version:       >=1.8.0.6
build-type:          Simple

Executable new
   Main-Is:          Main.hs
   hs-source-dirs:   src

   Build-depends:    base >= 4 && < 6,
                     regex-base >= 0.93.2 && < 0.94,
                     regex-pcre >= 0.94.2 && < 0.95,
                     array >= 0.3.0.0 && < 0.4.1

   ghc-options:      -Wall


-- Executable tests
--   Main-Is:           Main.hs
--   hs-source-dirs:    tests,
--                      src
--   -- Other-modules:     AI.Tests,
--   --                    AI.VersionSpaceTests

--   Build-Depends:     base >= 4 && < 6,
--                      QuickCheck >= 1.1 && < 2,
--                      HUnit >= 1.2.2 && < 1.2.3,
--                      test-framework >= 0.3.3 && < 0.4,
--                      test-framework-quickcheck >= 0.2.7 && < 0.3,
--                      test-framework-hunit >= 0.2.6 && < 0.3

--   ghc-options:       -Wall


-- source-repository head
--   type:     git
--   location: git://github.com/creswick/HaVSA.git
