name:                newt
version:             0.0.0.6
synopsis:            A trivially simple app to create things from simple templates.
description:         Instantiates text things from templates.
category:            Tools
license:             BSD3
License-file:        LICENSE
author:              Rogan Creswick
maintainer:          creswick@gmail.com
Cabal-Version:       >=1.8.0.6
build-type:          Simple


Library
   hs-source-dirs:   src
   Exposed-modules:  Newt.Newt,
                     Newt.Inputs,
                     Newt.Outputs,
                     Newt.Utilities

   Build-depends:    base       >= 4       && < 6,
                     filemanip  >= 0.3.5.2 && < 0.3.6,
                     mtl        >= 2.0.1.0 && < 2.0.2,
                     regex-base >= 0.93.2  && < 0.94,
                     regex-pcre >= 0.94.2  && < 0.95,
                     array      >= 0.3.0.0 && < 0.4.1,
                     Unixutils  >= 1.36    && < 1.37
   if impl(ghc < 7)
     Build-depends:
                     containers >= 0.3.0.0 && < 0.5,
                     directory  >= 1.0.1.1 && < 1.1.1,
                     process    >= 1.0.1.3 && < 1.0.2,
                     filepath   >= 1.1.0.0 && < 1.1.0.5
   else
     Build-depends:
                     containers >= 0.4.0.0 && < 0.5,
                     directory  >= 1.1.0.0 && < 1.1.1,
                     process    >= 1.0.1.5 && < 1.0.2,
                     filepath   >= 1.2.0.0 && < 1.2.1

   ghc-options:      -Wall


Executable newt
   Main-Is:          Main.hs
   hs-source-dirs:   appsrc

   Build-depends:    newt,
                     base       >= 4       && < 6,
                     mtl        >= 2.0.1.0 && < 2.0.2,
                     cmdargs    >= 0.6.9   && < 0.6.10

   if impl(ghc < 7)
     Build-depends:
                     containers >= 0.3.0.0 && < 0.5
   else
     Build-depends:
                     containers >= 0.4.0.0 && < 0.5


   ghc-options:      -Wall

Executable test-newt
   Main-is:          Main.hs

   Hs-Source-Dirs:   tests/src

   Build-depends:    newt,
                     base       >= 4       && < 6,
                     HUnit                      >= 1.2.2   && < 1.2.3,
                     test-framework             >= 0.3.3   && < 0.4,
                     test-framework-quickcheck2 >= 0.2.9   && < 0.3,
                     test-framework-hunit       >= 0.2.6   && < 0.3,
                     QuickCheck                 >= 2.4.1.1 && < 2.4.2,
                     uuid                       >= 1.2.2   && < 1.2.3

   if impl(ghc < 7)
     Build-depends:
                     containers >= 0.3.0.0 && < 0.5,
                     directory  >= 1.0.1.1 && < 1.1.1,
                     process    >= 1.0.1.3 && < 1.0.2,
                     filepath   >= 1.1.0.0 && < 1.1.0.5
   else
     Build-depends:
                     containers >= 0.4.0.0 && < 0.5,
                     directory  >= 1.1.0.0 && < 1.1.1,
                     process    >= 1.0.1.5 && < 1.0.2,
                     filepath   >= 1.2.0.0 && < 1.2.1



   GHC-Options: -Wall

source-repository head
  type:     git
  location: git://github.com/creswick/Newt.git
