name:                newt
version:             0.0.3.1.2
synopsis:            A trivially simple app to create things from simple templates.
description:         Instantiates text things from templates.
category:            Tools
license:             BSD3
License-file:        LICENSE
author:              Rogan Creswick
maintainer:          creswick@gmail.com
Cabal-Version:       >=1.8.0.6
build-type:          Simple

Extra-source-files:
                     tests/testFiles/dirTemplates/templateWithImages/<<<name>>>.txt
                     tests/testFiles/dirTemplates/templateWithImages/<<<name>>>.png
                     tests/testFiles/dirTemplates/template2/<<<projName>>>/in.cabal
                     tests/testFiles/dirTemplates/template3/<<<projName>>>/.gitignore
                     tests/testFiles/dirTemplates/template3/<<<projName>>>/<<<projName2>>>/.gitignore
                     tests/testFiles/dirTemplates/cabalProject/LICENSE
                     tests/testFiles/dirTemplates/cabalProject/tests/src/Main.hs
                     tests/testFiles/dirTemplates/cabalProject/src/<<<projName>>>.hs
                     tests/testFiles/dirTemplates/cabalProject/Setup.hs
                     tests/testFiles/dirTemplates/cabalProject/<<<projName>>>.cabal
                     tests/testFiles/dirTemplates/cabalProject/appsrc/Main.hs
                     tests/testFiles/dirTemplates/template1/<<<projName>>>/.gitignore
                     tests/testFiles/simpleTest/in.cabal.oracle.1
                     tests/testFiles/simpleTest/in.cabal.oracle.2
                     tests/testFiles/simpleTest/alternate1.txt
                     tests/testFiles/simpleTest/in.cabal
                     tests/testFiles/simpleTest/simple1.txt
                     tests/testFiles/sampleImage.png

Flag tests
   Description:    Build the tests
   Default:        False


Library
   hs-source-dirs:   src
   Exposed-modules:  Newt.Newt,
                     Newt.Inputs,
                     Newt.Outputs,
                     Newt.Utilities,
                     Newt.CmdParsing

   Build-depends:    base       >= 4       && < 6,
                     filemanip
                     mtl
                     array
                     Unixutils
                     safe 
                     cmdargs 
                     bytestring,
                     text
   if impl(ghc < 7)
     Build-depends:
                     containers,
                     directory,
                     process,
                     filepath
   else
     Build-depends:
                     containers,
                     directory,
                     process,
                     filepath

   ghc-options:      -Wall


Executable newt
   Main-Is:          Main.hs
   hs-source-dirs:   appsrc

   Build-depends:    newt,
                     base       >= 4       && < 6,
                     mtl,
                     cmdargs

   if impl(ghc < 7)
     Build-depends:
                     containers
   else
     Build-depends:
                     containers


   ghc-options:      -Wall

Executable test-newt
   if !flag(tests)
      Buildable:              False

   Main-is:          Main.hs

   Hs-Source-Dirs:   tests/src

   Build-depends:    newt,
                     base       >= 4       && < 6,
                     HUnit,
                     test-framework,
                     test-framework-quickcheck2,
                     test-framework-hunit,
                     QuickCheck,
                     uuid,
                     Unixutils,
                     safe

   if impl(ghc < 7)
     Build-depends:
                     containers,
                     directory,
                     process,
                     filepath
   else
     Build-depends:
                     containers,
                     directory,
                     process,
                     filepath

   Other-modules:    Integration,
                     ReplaceTests

   GHC-Options: -Wall

source-repository head
  type:     git
  location: git://github.com/creswick/Newt.git
