name:                <<<projName>>>
version:             0.0.0.1
synopsis:            <<<synopsis>>>
description:         <<<description>>>
category:            Tools
license:             BSD3
License-file:        LICENSE
author:              <<<author>>>
maintainer:          <<<authoremail>>>
Cabal-Version:       >=1.8.0.6
build-type:          Simple

Flag tests
   Description:    Build the tests
   Default:        False

Library
   hs-source-dirs:   src

   Build-depends:    base       >= 4       && < 6

   ghc-options:      -Wall

Executable <<<projName>>>
   Main-Is:          Main.hs
   hs-source-dirs:   appsrc

   Build-depends:    <<<projName>>>,
                     base       >= 4       && < 6

   ghc-options:      -Wall

Executable test-<<<projName>>>
   Main-Is:          Main.hs
   hs-source-dirs:   tests/src

   if !flag(tests)
      Buildable:              False

   Build-depends:    <<<projName>>>,
                     base       >= 4       && < 6

   ghc-options:      -Wall
